compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__constant_record_incorrect_arg_types_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub type Wibble {\n  Wibble(Int, Int)\n}\n\npub const wibble = Wibble(1.0, 1.0)\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int, Int)
}

pub const wibble = Wibble(1.0, 1.0)


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:27
  │
6 │ pub const wibble = Wibble(1.0, 1.0)
  │                           ^^^

Expected type:

    Int

Found type:

    Float

error: Type mismatch
  ┌─ /src/one/two.gleam:6:32
  │
6 │ pub const wibble = Wibble(1.0, 1.0)
  │                                ^^^

Expected type:

    Int

Found type:

    Float
